--- a/src/app/components/additem/additem.component.html
+++ b/src/app/components/additem/additem.component.html
@@ -1,1 +1,21 @@
 
+<form action="" (ngSubmit)="onSubmit()">
+    <h2>Registrar un nuevo  articulo</h2>
+    <div>
+        <label for=""> id del Articulo</label>
+        <input type="text" name="id" id="" [(ngModel)]="title">{{title}}
+    </div>
+    <div>
+        <label for=""> Nombre del Articulo</label>
+        <input type="text" name="title" id="" [(ngModel)]="title">{{title}}
+    </div>
+    <div>    
+        <label for="">Precio</label>
+        <input type="text" name="price" id="" [(ngModel)]="price">{{price}}
+    </div>
+    <div>
+        <label for="">Cantidad</label>
+        <input type="text" name="quantity" id="" [(ngModel)]="quantity">{{quantity}}
+    </div>
+    <input type="submit" value="Crear">
+</form>
